--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.16.0",
     "sqlite3": "^5.1.7",
     "superjson": "^2.2.1",
     "zod": "^3.23.8"
